[package]
name = "ferris-fetch"
version = "1.2.4"
authors = ["irevenko <ilya.revenko17@gmail.com>"]
edition = "2018"
description = "A system information tool for Rustaceans"
readme = "README.md"
repository = "https://github.com/irevenko/ferris-fetch/"
license = "MIT"
keywords = ["system", "cli"]
publish = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
whoami = "1.1.1"
sysinfo = { version = "0.23.2", default-features = false }
